--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,11 @@ catkin_package(
 )
 
 include_directories(
+	include
   ${catkin_INCLUDE_DIRS}
 )
 
-add_executable(${PROJECT_NAME}_node src/convert_vel_cmd_node.cpp)
+add_executable(${PROJECT_NAME}_node src/convert_vel_cmd_node.cpp src/convert_vel_cmd.cpp)
 target_link_libraries(${PROJECT_NAME}_node
    ${catkin_LIBRARIES}
 )
